<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dip"
        android:text="@string/cut_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_passwd"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="none"
        android:singleLine="false" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bt_paste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_getcopy_message" />

        <Button
            android:id="@+id/bt_sendcut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btcut_message" />
    </LinearLayout>

</LinearLayout>